# dungeon

./: .env  .env.development  .env.example  .env.production  .gitignore  AGENT.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  FIXES_APPLIED.md  KNOWN_ISSUES.md  README.md  TODOs.md  justfile
crates/client/: Cargo.toml  README.md
crates/client/agent/: Cargo.toml
crates/client/agent/src/: lib.rs
crates/client/blockchain/core/: Cargo.toml
crates/client/blockchain/core/src/: lib.rs  mock.rs  traits.rs  types.rs
crates/client/blockchain/sui/: Cargo.toml
crates/client/blockchain/sui/src/: client.rs  config.rs  converter.rs  lib.rs  submitter.rs
crates/client/bootstrap/: Cargo.toml
crates/client/bootstrap/src/: builder.rs  config.rs  lib.rs  oracles.rs  session.rs
crates/client/cli/: Cargo.toml
crates/client/cli/src/: app.rs  config.rs  main.rs  state.rs
crates/client/cli/src/app/: mod.rs
crates/client/cli/src/cursor/: mod.rs  movement.rs  targeting.rs
crates/client/cli/src/event/: consumer.rs  loop.rs
crates/client/cli/src/input/: mod.rs  provider.rs
crates/client/cli/src/presentation/: event_consumer.rs  event_loop.rs  mod.rs  terminal.rs  theme.rs  ui.rs
crates/client/core/: Cargo.toml
crates/client/core/src/: bootstrap.rs  config.rs  format.rs  lib.rs  targeting.rs  view_model.rs  world.rs
crates/client/core/src/services/: updater.rs
crates/client/core/src/view_model/: entities.rs  map.rs  mod.rs  presentation.rs  turn.rs  world.rs
crates/client/frontend/cli/: Cargo.toml
crates/client/frontend/cli/src/: app.rs  lib.rs  logging.rs  main.rs  start_screen.rs  state.rs
crates/client/frontend/core/: Cargo.toml
crates/client/frontend/core/src/: config.rs  event.rs  format.rs  frontend.rs  lib.rs  message.rs  view_model.rs
crates/client/runtime/: Cargo.toml
crates/client/src/: builder.rs  lib.rs  main.rs
crates/client/sui/: Cargo.toml  README.md
crates/client/sui/src/: lib.rs
crates/client/ui/: Cargo.toml
crates/game/content/: Cargo.toml
crates/game/content/data/: actors.ron  config.toml  items.ron  tables.toml
crates/game/content/data/actions/: attack.ron  basic.ron  items.ron  movement.ron
crates/game/content/data/maps/: test_dungeon.ron
crates/game/content/data/scenarios/: test_scenario.ron
crates/game/content/data/traits/: archetypes.ron  factions.ron  species.ron  temperaments.ron
crates/game/content/src/: lib.rs
crates/game/content/src/loaders/: actions.rs  actors.rs  config.rs  factory.rs  item.rs  map.rs  mod.rs  tables.rs  traits.rs
crates/game/content/src/traits/: mod.rs
crates/game/core/: Cargo.toml
crates/game/core/src/: config.rs  engine.rs  error.rs  lib.rs  provider.rs  traits.rs
crates/game/core/src/action/: available.rs  combat.rs  command.rs  effect.rs  error.rs  interact.rs  inventory.rs  kind.rs  mod.rs  movement.rs  profile.rs  root.rs  targeting.rs  transition.rs  types.rs  wait.rs
crates/game/core/src/combat/: damage.rs  hit.rs  mod.rs  result.rs
crates/game/core/src/engine/: errors.rs  hook.rs  mod.rs  reducer.rs  transition.rs  turns.rs
crates/game/core/src/env/: actions.rs  actors.rs  config.rs  error.rs  items.rs  map.rs  mod.rs  npc.rs  rng.rs  snapshot.rs  tables.rs
crates/game/core/src/state/: error.rs  mod.rs  turn.rs
crates/game/core/src/stats/: actor.rs  bonus.rs  conditions.rs  core.rs  derived.rs  mod.rs  modifiers.rs  resources.rs  snapshot.rs  speed.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: blockchain.rs  error.rs  event.rs  handle.rs  lib.rs  runtime.rs  types.rs
crates/runtime/src/api/: errors.rs  events.rs  handle.rs  mod.rs  providers.rs  registry.rs
crates/runtime/src/events/: bus.rs  extractor.rs  game_event.rs  mod.rs  types.rs
crates/runtime/src/handlers/: action_cost.rs  activation.rs  death.rs  mod.rs
crates/runtime/src/hooks/: action_cost.rs  activation.rs  context.rs  damage.rs  mod.rs  registry.rs
crates/runtime/src/oracle/: actions.rs  actors.rs  config.rs  items.rs  map.rs  mod.rs  npc.rs  tables.rs
crates/runtime/src/providers/: mod.rs  system_action.rs
crates/runtime/src/providers/ai/: context.rs  generator.rs  (+6 more)
crates/runtime/src/repository/: error.rs  map.rs  mod.rs  npc.rs  snapshot.rs  state.rs  traits.rs
crates/runtime/src/scenario/: mod.rs
crates/runtime/src/utils/: hash.rs  mod.rs
crates/runtime/src/worker/: mod.rs
crates/runtime/src/workers/: metrics.rs  mod.rs  persistence.rs  prover.rs  prover_old.rs.disabled  simulation.rs
crates/runtime/tests/: integration_test.rs  prover_integration.rs  turn_selection.rs
crates/xtask/: Cargo.toml  README.md
crates/xtask/src/: dirs.rs  main.rs  utils.rs
crates/xtask/src/commands/: clean.rs  extract_vk.rs  inspect_proof.rs  mod.rs  read_actions.rs  read_state.rs  tail_logs.rs
crates/zk/: BENCHMARKS.md  Cargo.toml  README.md  build.rs  compare-backends.sh  quick-compare.sh  simple-timing.sh
crates/zk/benches/: arkworks_benchmarks.rs  backend_comparison.rs
crates/zk/methods/batch-state-transition/: Cargo.toml
crates/zk/methods/guest/: Cargo.toml
crates/zk/methods/guest-sp1/: Cargo.toml
crates/zk/methods/risc0/: Cargo.toml
crates/zk/methods/single-state-transition/: Cargo.toml
crates/zk/methods/state-transition/: Cargo.toml
crates/zk/src/: lib.rs  oracle.rs  prover.rs
crates/zk/src/circuit/: commitment.rs  constraints.rs  gadgets.rs  game_transition.rs  groth16.rs  merkle.rs  mod.rs  test_helpers.rs  witness.rs
crates/zk/src/risc0/: groth16.rs  mod.rs  prover.rs
crates/zk/src/sp1/: mod.rs  prover.rs
crates/zk/src/zkvm/: mod.rs  risc0.rs  sp1.rs
crates/zk/tests/: arkworks_game_transition.rs  arkworks_hello_world.rs  arkworks_prover_integration.rs  arkworks_prover_verification.rs  debug_circuit_values.rs  debug_constraint_counts.rs  debug_dummy_circuit.rs  debug_dummy_merkle.rs  debug_helloworld_dummy.rs  debug_key_circuit_mismatch.rs  debug_real_circuit_constraints.rs  debug_real_merkle_paths.rs  hash_five_consistency.rs  hash_two_consistency.rs  merkle_consistency.rs  poseidon_consistency.rs  test_verification_debug.rs
(+264 files in other folders)
