[workspace]
members = [
    "crates/game/core",
    "crates/game/content",
    "crates/runtime",
    "crates/zk",
    "crates/client/bootstrap",
    "crates/client/frontend/core",
    "crates/client/frontend/cli",
]
resolver = "2"

# ============================================================================
# Workspace Dependencies
# ============================================================================
# Central dependency management for version consistency and easier maintenance.
# Each crate can use these with: dependency = { workspace = true }
#
# Benefits:
# - Single source of truth for versions
# - Easier dependency updates
# - Better build caching and performance
# - Reduced risk of version conflicts
# ============================================================================

[workspace.dependencies]
# ----------------------------------------------------------------------------
# Internal Crates
# ----------------------------------------------------------------------------
game-core = { path = "crates/game/core" }
game-content = { path = "crates/game/content" }
runtime = { path = "crates/runtime" }
zk = { path = "crates/zk" }
client-bootstrap = { path = "crates/client/bootstrap" }
frontend-core = { path = "crates/client/frontend/core" }

# ----------------------------------------------------------------------------
# Async Runtime
# ----------------------------------------------------------------------------
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# ----------------------------------------------------------------------------
# Serialization
# ----------------------------------------------------------------------------
# Note: serde without default-features is used in game-core for no_std support
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = "1.0.145"
# NOTE: bincode 1.3 pinned for compatibility with risc0-zkvm 3.0
# Do not upgrade to bincode 2.0 until risc0-zkvm supports it
bincode = "1.3"

# ----------------------------------------------------------------------------
# Error Handling
# ----------------------------------------------------------------------------
thiserror = "2"
anyhow = "1.0"

# ----------------------------------------------------------------------------
# Logging & Tracing
# ----------------------------------------------------------------------------
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# ----------------------------------------------------------------------------
# Data Structures (no_std compatible)
# ----------------------------------------------------------------------------
bounded-vector = { version = "0.3", default-features = false }
arrayvec = { version = "0.7", default-features = false }
bitflags = { version = "2.9", default-features = false }

# ----------------------------------------------------------------------------
# ZK Dependencies (only RISC0 is currently implemented)
# ----------------------------------------------------------------------------
risc0-zkvm = "3.0"
risc0-build = "3.0"

# NOTE: sp1-sdk and arkworks dependencies are intentionally not included
# They will be added when those backends are actually implemented
# This keeps Cargo.lock clean and reduces unnecessary dependency compilation

# ----------------------------------------------------------------------------
# Terminal UI (client only)
# ----------------------------------------------------------------------------
ratatui = "0.29"
crossterm = { version = "0.29", features = ["event-stream"] }

# ----------------------------------------------------------------------------
# Utilities
# ----------------------------------------------------------------------------
directories = "6.0"
dotenvy = "0.15"

# ----------------------------------------------------------------------------
# Development & Testing
# ----------------------------------------------------------------------------
tempfile = "3.23.0"
