[workspace]
members = [
    "crates/game/core",
    "crates/game/content",
    "crates/runtime",
    "crates/zk",
    "crates/client/bootstrap",
    "crates/client/core",
    "crates/client/cli",
    "crates/xtask",
    "crates/behavior-tree",
]
resolver = "2"

# ============================================================================
# Workspace Dependencies
# ============================================================================
# Central dependency management for version consistency and easier maintenance.
# Each crate can use these with: dependency = { workspace = true }
# ============================================================================

[workspace.dependencies]
# ----------------------------------------------------------------------------
# Internal Crates
# ----------------------------------------------------------------------------
game-core = { path = "crates/game/core" }
game-content = { path = "crates/game/content" }
behavior-tree = { path = "crates/behavior-tree" }
runtime = { path = "crates/runtime", default-features = false }
zk = { path = "crates/zk", default-features = false }
client-bootstrap = { path = "crates/client/bootstrap", default-features = false }
client-core = { path = "crates/client/core" }

# ----------------------------------------------------------------------------
# Async Runtime
# ----------------------------------------------------------------------------
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# ----------------------------------------------------------------------------
# Serialization
# ----------------------------------------------------------------------------
# Note: serde without default-features is used in game-core for no_std support
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
] }
serde_json = "1.0.145"
# NOTE: bincode 1.3 pinned for compatibility with risc0-zkvm 3.0
# Do not upgrade to bincode 2.0 until risc0-zkvm supports it
bincode = "1.3"

# ----------------------------------------------------------------------------
# Error Handling
# ----------------------------------------------------------------------------
thiserror = "2"
anyhow = "1.0"

# ----------------------------------------------------------------------------
# Logging & Tracing
# ----------------------------------------------------------------------------
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# ----------------------------------------------------------------------------
# Data Structures (no_std compatible)
# ----------------------------------------------------------------------------
bounded-vector = { version = "0.3", default-features = false }
arrayvec = { version = "0.7", default-features = false }
bitflags = { version = "2.9", default-features = false }

# ----------------------------------------------------------------------------
# ZK Dependencies
# ----------------------------------------------------------------------------
# RISC0 zkVM (production backend)
risc0-zkvm = "3.0"
risc0-build = "3.0"

# Arkworks ecosystem for circuit-based proving (Groth16 on BN254)
ark-ff = "0.5"                    # Finite field arithmetic
ark-ec = "0.5"                    # Elliptic curve operations
ark-bn254 = "0.5"                 # BN254 curve for EVM compatibility
ark-groth16 = "0.5"               # Groth16 proof system
ark-relations = "0.5"             # R1CS constraint systems
ark-crypto-primitives = { version = "0.5", features = ["crh", "sponge"] }  # Poseidon hash, Merkle trees
ark-serialize = "0.5"             # Serialization for proofs
ark-std = "0.5"                   # Standard library compatibility
ark-r1cs-std = "0.5"              # R1CS gadgets for constraints

# ----------------------------------------------------------------------------
# Terminal UI (client only)
# ----------------------------------------------------------------------------
ratatui = "0.29"
crossterm = { version = "0.29", features = ["event-stream"] }

# ----------------------------------------------------------------------------
# Utilities
# ----------------------------------------------------------------------------
directories = "6.0"
dotenvy = "0.15"

# ----------------------------------------------------------------------------
# Development & Testing
# ----------------------------------------------------------------------------
tempfile = "3.23.0"
