[package]
name = "dungeon-client"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "dungeon"
path = "src/main.rs"

[features]
# Default features for binary crate (library crates have no defaults)
# - frontend-cli: Terminal UI
# - zkvm-stub: Fast development with instant fake proofs
default = ["frontend-cli", "zkvm-stub"]

# ============================================================================
# Frontend Selection (choose one)
# ============================================================================
frontend-cli = ["dep:client-frontend-cli"]
# frontend-gui = []  # Future: Graphical UI

# ============================================================================
# Blockchain Integration (optional)
# ============================================================================
blockchain-sui = ["dep:client-blockchain-sui", "dep:client-blockchain-core"]
# blockchain-ethereum = []  # Future: EVM-based chains

# ============================================================================
# ZK Backend Selection (mutually exclusive - choose ONE)
# ============================================================================
# These propagate to frontend-cli → bootstrap → runtime → zk
zkvm-risc0 = ["client-frontend-cli?/risc0"]
zkvm-sp1 = ["client-frontend-cli?/sp1"]
zkvm-stub = ["client-frontend-cli?/stub"]
zkvm-arkworks = ["client-frontend-cli?/arkworks"]

[dependencies]
# Always included
anyhow = { workspace = true }
tokio = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }

# Frontend core (for FrontendApp trait)
client-frontend-core = { workspace = true }

# Feature-gated frontends
client-frontend-cli = { workspace = true, optional = true }

# Feature-gated blockchains
client-blockchain-core = { workspace = true, optional = true }
client-blockchain-sui = { workspace = true, optional = true }
