[package]
name = "dungeon-client"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "dungeon"
path = "src/main.rs"

[features]
default = ["cli", "stub"]

# Frontend
cli = ["dep:client-frontend-cli"]

# ZK Backend (mutually exclusive - choose ONE)
risc0 = ["client-frontend-cli?/risc0"]
sp1 = ["client-frontend-cli?/sp1"]
stub = ["client-frontend-cli?/stub"]
arkworks = ["client-frontend-cli?/arkworks"]

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }

# Frontend core (for FrontendApp trait)
client-frontend-core = { workspace = true }

# Feature-gated frontends
client-frontend-cli = { workspace = true, optional = true }

# Blockchain integration (optional, future)
client-blockchain-core = { workspace = true, optional = true }
client-blockchain-sui = { workspace = true, optional = true }
