[package]
name = "runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
game-core = { workspace = true, features = ["serde"] }
zk = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
directories = { workspace = true }

[dev-dependencies]
client-bootstrap = { workspace = true }
tempfile = { workspace = true }
