[package]
name = "xtask"
version = "0.1.0"
edition = "2024"

# xtask is a development-only binary, not published
publish = false

[dependencies]
# CLI argument parsing
clap = { version = "4.5", features = ["derive", "cargo"] }

# Error handling
anyhow = { workspace = true }

# Platform-specific directory detection (reuse from workspace)
directories = { workspace = true }

# Colored terminal output for better UX
console = "0.16"

# File watching for tail-logs (optional feature for future enhancement)
# notify = { version = "7.0", optional = true }

[[bin]]
name = "xtask"
path = "src/main.rs"
