[package]
name = "zk"
version = "0.1.0"
edition = "2024"

[features]
# Default: RISC0 zkVM backend with std
default = ["std", "risc0"]

# Standard library support (enabled by default, disable for no_std guest)
std = []

# Proving backends (mutually exclusive - choose one)
risc0 = ["risc0-zkvm", "risc0-build"]  # RISC0 zkVM backend
sp1 = ["sp1-sdk"]                       # SP1 zkVM backend (not implemented)
stub = []                               # Stub prover (returns dummy proofs, no verification)

# Arkworks circuit (future, requires StateTransition/Merkle with Poseidon hash)
arkworks = [
    "ark-ff",
    "ark-ec",
    "ark-bn254",
    "ark-groth16",
    "ark-relations",
    "ark-crypto-primitives",
]

[build-dependencies]
risc0-build = { version = "3.0", optional = true }

[dependencies]
game-core = { path = "../game/core", features = ["serde"] }
thiserror = "2"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
tracing = "0.1"

# zkVM dependencies (optional)
sp1-sdk = { version = "5.2", optional = true }
risc0-zkvm = { version = "3.0", optional = true }

# Arkworks circuit dependencies (optional)
ark-ff = { version = "0.5", optional = true }
ark-ec = { version = "0.5", optional = true }
ark-bn254 = { version = "0.5", optional = true }
ark-groth16 = { version = "0.5", optional = true }
ark-relations = { version = "0.5", optional = true }
ark-crypto-primitives = { version = "0.5", features = ["crh"], optional = true }

[package.metadata.risc0]
methods = ["methods/guest"]
