[package]
name = "zk"
version = "0.1.0"
edition = "2024"

# ============================================================================
# Feature Flags Guide
# ============================================================================
#
# Overview:
# ─────────
# The zk crate provides multiple proving backends for generating zero-knowledge
# proofs of game state transitions. Choose ONE backend at build time.
#
# Available Backends:
# ───────────────────
# • risc0    - RISC0 zkVM (production, generates real proofs, ~30-60s per proof)
# • sp1      - SP1 zkVM (placeholder only, no dependencies yet)
# • stub     - Dummy prover (development only, instant "proofs", no security)
# • arkworks - Arkworks circuits (placeholder only, no dependencies yet)
#
# Feature Profiles:
# ─────────────────
# Development (fast iteration):
#   cargo build --no-default-features --features stub
#   or: RISC0_DEV_MODE=1 cargo build  (uses RISC0 but skips real proving)
#
# Testing:
#   cargo test --no-default-features --features stub
#
# Production:
#   cargo build --release  (uses default = risc0)
#
# Implementation Status:
# ──────────────────────
# ✅ risc0  - Fully implemented
# ⚠️  sp1    - Feature exists but no implementation or dependencies
# ⚠️  arkworks - Feature exists but no implementation or dependencies
# ✅ stub   - Implemented for development/testing
#
# Notes:
# ──────
# - Only ONE backend should be active at a time (mutually exclusive)
# - zkvm is a meta-feature enabled by all backends
# - RISC0 builds are slow; use stub or RISC0_DEV_MODE=1 for development
# - See .cargo/config.toml for convenient aliases
# - When implementing sp1/arkworks, add dependencies to workspace root first
# ============================================================================

[features]
# Default: Production-ready RISC0 zkVM backend
default = ["risc0"]

# Meta-feature enabled by all zkVM backends
zkvm = []

# ────────────────────────────────────────────────────────────────────────────
# Proving Backends (mutually exclusive - choose ONE)
# ────────────────────────────────────────────────────────────────────────────

# RISC0 zkVM backend (production)
# Generates cryptographically secure proofs using RISC Zero's zkVM
risc0 = ["zkvm", "dep:risc0-zkvm", "dep:risc0-build"]

# SP1 zkVM backend (not implemented - placeholder for future)
# Alternative zkVM backend for future exploration
# Dependencies will be added when implementation begins
sp1 = ["zkvm"]

# Stub prover (development only)
# Returns dummy proofs instantly without real cryptographic proving
# ⚠️  WARNING: No security guarantees! For development and testing only!
stub = ["zkvm"]

# ────────────────────────────────────────────────────────────────────────────
# Future: Arkworks Circuit Backend
# ────────────────────────────────────────────────────────────────────────────

# Arkworks Groth16 circuit (implementation in progress)
# Provides EVM-compatible proofs using BN254 curve
# Implements state transitions as R1CS constraints
arkworks = [
    "dep:ark-ff",
    "dep:ark-ec",
    "dep:ark-bn254",
    "dep:ark-groth16",
    "dep:ark-relations",
    "dep:ark-crypto-primitives",
    "dep:ark-serialize",
    "dep:ark-std",
    "dep:ark-r1cs-std"
]

[build-dependencies]
risc0-build = { workspace = true, optional = true }

[dependencies]
game-core = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
tracing = { workspace = true }

# zkVM dependencies
risc0-zkvm = { workspace = true, optional = true }

# Arkworks dependencies for circuit-based proving
ark-ff = { workspace = true, optional = true }
ark-ec = { workspace = true, optional = true }
ark-bn254 = { workspace = true, optional = true }
ark-groth16 = { workspace = true, optional = true }
ark-relations = { workspace = true, optional = true }
ark-crypto-primitives = { workspace = true, optional = true, features = ["crh", "sponge", "r1cs"] }
ark-serialize = { workspace = true, optional = true }
ark-std = { workspace = true, optional = true }
ark-r1cs-std = { workspace = true, optional = true }

[dev-dependencies]
bounded-vector = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }

# NOTE: Unused backend dependencies are intentionally omitted
# Add these when implementing SP1 backend:
# - sp1-sdk = { version = "5.2", optional = true }

[package.metadata.risc0]
methods = ["methods/guest"]

[[bench]]
name = "arkworks_benchmarks"
harness = false
required-features = ["arkworks"]

[[bench]]
name = "backend_comparison"
harness = false
