[package]
name = "zk"
version = "0.1.0"
edition = "2024"

# ============================================================================
# Feature Flags Guide
# ============================================================================
#
# Overview:
# ─────────
# The zk crate provides multiple proving backends for generating zero-knowledge
# proofs of game state transitions. Choose ONE backend at build time.
#
# Available Backends:
# ───────────────────
# • risc0    - RISC0 zkVM (production, generates real proofs, ~30-60s per proof)
# • sp1      - SP1 zkVM (placeholder only, no dependencies yet)
# • stub     - Dummy prover (development only, instant "proofs", no security)
# • arkworks - Arkworks circuits (placeholder only, no dependencies yet)
#
# Feature Profiles:
# ─────────────────
# Development (fast iteration):
#   cargo build --no-default-features --features stub
#   or: RISC0_DEV_MODE=1 cargo build  (uses RISC0 but skips real proving)
#
# Testing:
#   cargo test --no-default-features --features stub
#
# Production:
#   cargo build --release  (uses default = risc0)
#
# Implementation Status:
# ──────────────────────
# ✅ risc0  - Fully implemented
# ⚠️  sp1    - Feature exists but no implementation or dependencies
# ⚠️  arkworks - Feature exists but no implementation or dependencies
# ✅ stub   - Implemented for development/testing
#
# Notes:
# ──────
# - Only ONE backend should be active at a time (mutually exclusive)
# - zkvm is a meta-feature enabled by all backends
# - RISC0 builds are slow; use stub or RISC0_DEV_MODE=1 for development
# - See .cargo/config.toml for convenient aliases
# - When implementing sp1/arkworks, add dependencies to workspace root first
# ============================================================================

[features]
# No default backend - explicitly select via workspace or binary crate
# This follows Rust best practices for library crates (like tokio, serde)
default = []

# Meta-feature enabled by all zkVM backends
zkvm = []

# ────────────────────────────────────────────────────────────────────────────
# Proving Backends (mutually exclusive - choose ONE)
# ────────────────────────────────────────────────────────────────────────────

# RISC0 zkVM backend (production)
# Generates cryptographically secure proofs using RISC Zero's zkVM
risc0 = ["zkvm", "dep:risc0-zkvm", "dep:risc0-build", "dep:risc0-groth16"]

# SP1 zkVM backend (production alternative to RISC0)
# Generates cryptographically secure proofs using Succinct's SP1 zkVM
# Proof mode is selected at runtime via SP1_PROOF_MODE environment variable:
# - "compressed" (default): Compressed STARK (~4-5MB, off-chain verification)
# - "groth16": Groth16 SNARK (~260 bytes, on-chain verification)
# - "plonk": PLONK SNARK (~868 bytes, on-chain, no trusted setup)
sp1 = ["zkvm", "dep:sp1-sdk", "dep:sp1-build"]

# Stub prover (development only)
# Returns dummy proofs instantly without real cryptographic proving
# ⚠️  WARNING: No security guarantees! For development and testing only!
stub = ["zkvm"]

# ────────────────────────────────────────────────────────────────────────────
# Future: Arkworks Circuit Backend
# ────────────────────────────────────────────────────────────────────────────

# Arkworks Groth16 circuit (not implemented - placeholder for future)
# Will provide EVM-compatible proofs using BN254 curve
# Requires implementing state transitions as R1CS constraints
# Dependencies will be added when implementation begins
arkworks = []

[build-dependencies]
risc0-build = { workspace = true, optional = true }
sp1-build = { workspace = true, optional = true }

[dependencies]
game-core = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }

# zkVM dependencies
risc0-zkvm = { workspace = true, optional = true }
risc0-groth16 = { workspace = true, optional = true }

# SP1 dependencies
sp1-sdk = { workspace = true, optional = true }

# NOTE: Arkworks dependencies not yet added
# Will be added when implementing custom circuit backend:
# - ark-ff, ark-ec, ark-bn254, ark-groth16, ark-relations, ark-crypto-primitives

[package.metadata.risc0]
methods = ["methods/risc0/state-transition"]
