[package]
name = "client-bootstrap"
version = "0.1.0"
edition = "2024"

[features]
# ZK backend features (propagate to runtime)
# No default - backend must be explicitly selected
default = []
risc0 = ["runtime/risc0"]
stub = ["runtime/stub"]
sp1 = ["runtime/sp1"]
arkworks = ["runtime/arkworks"]
# Blockchain integration
sui = ["runtime/sui"]

[dependencies]
anyhow = { workspace = true }
game-core = { workspace = true }
runtime = { workspace = true }
game-content = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
