[package]
name = "game-core"
version = "0.1.0"
edition = "2024"

[features]
default = ["std"]
std = []
serde = [
    "dep:serde",
    "bounded-vector/serde",
    "arrayvec/serde",
    "bitflags/serde",
]

[dependencies]
bounded-vector = { version = "0.3", default-features = false }
arrayvec = { version = "0.7", default-features = false }
thiserror = { version = "2", default-features = false }
bitflags = { version = "2.9", default-features = false }
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
], optional = true }
