[package]
name = "client-blockchain-core"
version = "0.1.0"
edition = "2024"

[features]
# ZK backend features (propagate to zk crate)
default = []
risc0 = ["zk/risc0"]
sp1 = ["zk/sp1"]
stub = ["zk/stub"]
arkworks = ["zk/arkworks"]

[dependencies]
# Internal dependencies
zk = { workspace = true }
game-core = { workspace = true }

# Serialization
serde = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = "0.1"

# Logging
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
