[package]
name = "client-blockchain-sui"
version = "0.1.0"
edition = "2024"

[features]
default = []

# ZK backend propagation (required by zk dependency)
risc0 = ["zk/risc0"]
sp1 = ["zk/sp1"]
stub = ["zk/stub"]
arkworks = ["zk/arkworks"]

[dependencies]
# Internal dependencies
zk = { workspace = true }

# Sui SDK
sui-sdk = { git = "https://github.com/mystenlabs/sui", package = "sui-sdk" }
sui-types = { git = "https://github.com/mystenlabs/sui", package = "sui-types" }
sui-json-rpc-types = { git = "https://github.com/mystenlabs/sui", package = "sui-json-rpc-types" }
sui-keys = { git = "https://github.com/mystenlabs/sui", package = "sui-keys" }
shared-crypto = { git = "https://github.com/mystenlabs/sui", package = "shared-crypto" }

# SP1-Sui conversion
sp1-sui = { git = "https://github.com/SoundnessLabs/sp1-sui" }
sp1-sdk = { workspace = true }

# Serialization
bincode = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
bcs = "0.1"  # Binary Canonical Serialization for Sui

# Error handling
thiserror = { workspace = true }
anyhow = "1.0"

# Async runtime
tokio = { workspace = true }
async-trait = "0.1"

# Logging
tracing = { workspace = true }

# HTTP client for Walrus integration
reqwest = { version = "0.11", features = ["json"] }

# Utilities
hex = "0.4"
dirs = "5.0"

# TOML serialization for deployment info
toml = "0.8"
