[package]
name = "cli-client"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cli-client"
path = "src/main.rs"

[dependencies]
# Core dependencies
game-core = { workspace = true }
runtime = { workspace = true }
frontend-core = { workspace = true }
client-bootstrap = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Terminal UI
ratatui = { workspace = true }
crossterm = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

# Environment variables
dotenvy = { workspace = true }
