[package]
name = "cli-client"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cli-client"
path = "src/main.rs"

[features]
# ZK backend features (propagate to client-bootstrap)
default = ["risc0"]
risc0 = ["client-bootstrap/risc0"]
stub = ["client-bootstrap/stub"]
sp1 = ["client-bootstrap/sp1"]
arkworks = ["client-bootstrap/arkworks"]

[dependencies]
# Core dependencies
game-core = { workspace = true }
runtime = { workspace = true }
frontend-core = { workspace = true }
client-bootstrap = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Terminal UI
ratatui = { workspace = true }
crossterm = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

# Environment variables
dotenvy = { workspace = true }
